--- a/style.css
+++ b/style.css
@@ -1,88 +1,190 @@
-body{
-background-color: black;
+* {
+  font-family: "Poppins", sans-serif;
+}
+
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Outfit:wght@400;700&family=Poppins:ital,wght@0,700;1,200;1,300&display=swap");
+
+.toggle {
+  position: relative;
+  width: 60px;
+  height: 60px;
+  background: url(menu.png);
+  background-repeat: no-repeat;
+  background-size: 30px;
+  background-position: center;
+  cursor: pointer;
+}
+
+nav {
+  position: absolute;
+  top: 50%;
+  right: 0;
+  left: 0;
+  width: 319px;
+  display: table;
+  margin: 0 auto;
+  transform: translateY(-50%);
+}
+
+nav a {
+  position: relative;
+  width: 33.333%;
+  display: table-cell;
+  text-align: center;
+  color: #949494;
+  text-decoration: none;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-weight: bold;
+  padding: 10px 20px;
+  transition: 0.2s ease color;
+}
+
+nav a:before,
+nav a:after {
+  content: "";
+  position: absolute;
+  border-radius: 50%;
+  transform: scale(0);
+  transition: 0.2s ease transform;
+}
+
+nav a:before {
+  top: 0;
+  left: 10px;
+  width: 6px;
+  height: 6px;
+}
+
+nav a:after {
+  top: 5px;
+  left: 18px;
+  width: 4px;
+  height: 4px;
+}
+
+nav a:nth-child(1):before {
+  background-color: yellow;
+}
+
+nav a:nth-child(1):after {
+  background-color: red;
+}
+
+nav a:nth-child(2):before {
+  background-color: #00e2ff;
+}
+
+nav a:nth-child(2):after {
+  background-color: #89ff00;
+}
+
+nav a:nth-child(3):before {
+  background-color: purple;
+}
+
+nav a:nth-child(3):after {
+  background-color: palevioletred;
+}
+
+#indicator {
+  position: absolute;
+  left: 5%;
+  bottom: 0;
+  width: 30px;
+  height: 3px;
+  background-color: #fff;
+  border-radius: 5px;
+  transition: 0.2s ease left;
+}
+
+body {
+  background-color: black;
+}
+
+.header {
+  color: white;
 }
 
 .container {
-    max-width: 1000px;
-    margin: 0 auto;
-    color: white;
-  }
-  
+  max-width: 1000px;
+  margin: 0 auto;
+  color: white;
+}
+
+section.module h2 {
+  margin-bottom: 20px;
+  font-size: 30px;
+  color: rgba(204, 204, 204, 1);
+}
+
+section.module p {
+  margin-bottom: 40px;
+  font-size: 24px;
+  font-weight: 300;
+  line-height: 28px;
+}
+
+section.module p:last-child {
+  margin-bottom: 0;
+}
+
+section.module.content {
+  padding: 60px 0;
+  text-align: left;
+}
+
+section.module.parallax {
+  height: 800px;
+  background-position: 50% 50%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+}
+
+section.module.parallax h1 {
+  color: rgba(255, 255, 255, 0.7);
+  font-size: 48px;
+  line-height: 800px;
+  font-weight: 700;
+  text-align: center;
+  text-transform: uppercase;
+  text-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+}
+
+section.module.parallax-1 {
+  background-image: url(1_max.jpg);
+}
+
+section.module.parallax-2 {
+  background-image: url(Pete_Rock.jpg);
+}
+
+section.module.parallax-3 {
+  background-image: url(Dj_Console.jpg);
+}
+
+@media all and (min-width: 600px) {
   section.module h2 {
-    margin-bottom: 20px;
-    font-size: 30px;
-    color: rgba(204,204,204,1);
-  }
-  
-  section.module p {
-    margin-bottom: 40px;
-    font-size: 24px;
-    font-weight: 300;
-    line-height: 28px;	
-  }
-  
-  section.module p:last-child {
-    margin-bottom: 0;
-  }
-  
-  section.module.content {
-    padding: 60px 0;
-    text-align: left;
-  }
-  
-  section.module.parallax {
-    height: 800px;
-    background-position: 50% 50%;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-  }
-  
-  section.module.parallax h1 {
-    color: rgba(255, 255, 255, 0.7);
-    font-size: 48px;
-    line-height: 800px;
-    font-weight: 700;
-    text-align: center;
-    text-transform: uppercase;
-    text-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
-  }
-  
-  section.module.parallax-1 {
-    background-image: url(1_max.jpg);
-  }
-  
-  section.module.parallax-2 {
-    background-image: url(Pete_Rock.jpg);
-  }
-  
-  section.module.parallax-3 {
-    background-image: url(Dj_Console.jpg);
-  }
-
-  @media all and (min-width: 600px) {
-    section.module h2 {
     font-size: 38px;
-    }
+  }
 
-    section.module a {
+  section.module a {
     font-size: 22px;
-    }
+  }
 
-    section.module.parallax h1 {
+  section.module.parallax h1 {
     font-size: 82px;
-    }
-
+  }
 }
 
 @media all and (min-width: 960px) {
-    section.module.parallax h1 {
+  section.module.parallax h1 {
     font-size: 145px;
-    }
+  }
 }
 
 @media all and (max-width: 680px) {
-     section.module.content {
-     text-align: center;
-     }
+  section.module.content {
+    text-align: center;
+  }
 }
